<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_date">Enter Date</string>
    <string name="select_date">Select Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description(Optional)</string>
</resources>